# projetDeC

./: CMakeLists.txt  README.md  cell.c  cell.h  exemple_invalide.txt  fonctions.c  fonctions.h  hasse.c  hasse.h  main.c  markov.c  markov.h  matrix.c  matrix.h  partie_1.txt  structs.h  sujet_partie1_FR.txt  sujet_partie2_FR.txt  sujet_partie_3_FR.txt  tarjan.c  tarjan.h
data/: exemple3.txt
